<resources>
    <string name="app_name">Coach-Nutrition</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="total_calories">Total Calories</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="day_meals">Day Meals</string>
    <string name="objective">Objectif</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="empty_date">0000-00-00</string>
    <string name="day">Day</string>
    <string name="day_show">Day Show</string>
    <string name="graph">Graph</string>
    <string name="_1_0">1.0</string>
    <string name="calories">Calories</string>
    <string name="mark">Mark</string>
    <string name="week">Week</string>
    <string name="meal">Meal</string>
    <string name="upload">Upload</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="user_email_com">user@email.com</string>
</resources>
