<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="groupk.coachnutrition.DayMealActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextViewStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:id="@+id/tv_meal_date"
                    style="@style/TextViewStyle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0000-00-00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextViewStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/day_meals"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Spinner
                    android:id="@+id/s_day_meals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextViewStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quantity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/et_day_meal_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="1.0"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/b_day_add_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                android:text="@string/add"
                android:onClick="addDayMeal"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
